# agterm

./: .gitignore  .mcp.json  ANNOTATIONS_API.md  ANNOTATIONS_GUIDE.md  ANNOTATIONS_IMPLEMENTATION_SUMMARY.md  ANNOTATIONS_README.md  AUTOMATION_IMPLEMENTATION_SUMMARY.md  BROADCAST_IMPLEMENTATION.md  BROADCAST_QUICKSTART.md  BROADCAST_SUMMARY.md  BROADCAST_USAGE.md  CHANGELOG.md  CLIPBOARD_HISTORY_IMPLEMENTATION.md  CLIPBOARD_HISTORY_USAGE.md  COMPLETION_IMPLEMENTATION.md  CONFIG.md  Cargo.toml  DEVICE_ATTRIBUTES_IMPLEMENTATION.md  DIFF_VIEWER_IMPLEMENTATION.md  DIFF_VIEWER_README.md  DIFF_VIEWER_VISUAL_EXAMPLE.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_WORK_COMPLETED.md  FILTERS_FILES.txt  FILTERS_GUIDE.md  FILTERS_IMPLEMENTATION_SUMMARY.md  FILTERS_QUICK_REFERENCE.md  FILTERS_README.md  IMAGE_PROTOCOL_IMPLEMENTATION.md  IMAGE_PROTOCOL_SUMMARY.md  LICENSE  LOGGING.md  LOGGING_CHECKLIST.md  LOGGING_IMPLEMENTATION_SUMMARY.md  MACROS.md  MACRO_IMPLEMENTATION_SUMMARY.md  MACRO_QUICK_REFERENCE.md  MACRO_SYSTEM_DELIVERY.md  OSC8_IMPLEMENTATION.md  OSC_SEQUENCES_IMPLEMENTATION.md  (+43 more)
.claude/: CLAUDE.md  settings.json
.claude/skills/: agterm-debug.md  agterm-inspect.md  agterm-logs.md  agterm-profile.md  agterm-run.md  agterm-test.md
.github/: PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  SECURITY.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  dependency-review.yml  labeler.yml  release.yml
.sisyphus/: ultrawork-state.json
.sisyphus/notepads/floem-phase2/: learnings.md
.sisyphus/plans/: PRD-agent-orchestration-ui.md  PRD-agterm-v1.1.md  TASKS-v1.1.md  agentic-terminal-v2.md  agentic-terminal-v3-revised.md  gui-redesign-floem.md  improvement-roadmap-2026-01.md
assets/icons/: icon.icns
benches/: README.md  memory.rs  rendering_benchmark.rs  terminal_benchmark.rs
docs/: API_DOCUMENTATION.md  AUTOMATION.md  AUTOMATION_DSL_REFERENCE.md  AUTOMATION_QUICKSTART.md  BENCHMARKS.md  DIFF_VIEWER.md  ENVIRONMENT_DETECTION.md  FLOEM_DEVELOPMENT_PHASES.md  FLOEM_GUI.md  FLOEM_IMPLEMENTATION_NOTES.md  FLOEM_PHASE3_SUMMARY.md  HOOKS.md  HOOKS_QUICKSTART.md  IME_TEST_GUIDE.md  INDEX.md  KEYBOARD_SHORTCUTS.md  LINK_HANDLER.md  MENU_QUICKSTART.md  QUICK_START.md  README.md  RECORDING.md  RECORDING_ARCHITECTURE.md  RECORDING_QUICKREF.md  RECORDING_UI_INTEGRATION.md  SESSION_RESTORATION.md  THEMES.md  TITLE_QUICK_REFERENCE.md  URL_CLICK_IMPLEMENTATION.md  command_validator.md
examples/: annotations_demo.rs  automation_example.rs  bookmark_usage_examples.rs  bookmarks_demo.rs  broadcast_demo.rs  clipboard_architecture.txt  clipboard_history_demo.rs  clipboard_usage.md  color_demo.sh  command_validator_demo.rs  config.toml  custom_profile.toml  custom_theme.toml  diff_files.rs  diff_viewer_demo.rs  env_detection_demo.rs  env_manager_demo.rs  filters_demo.rs  hook_demo.rs  hooks.toml.example  i18n_demo.rs  image_protocol_demo.rs  link_handler_example.rs  logging_demo.rs  macro_example.rs  mcp_example.toml  mcp_usage.rs  memory_optimization_demo.rs  menu_example.rs  plugin_example.rs  profile_usage.rs  profiles_demo.rs  quick_actions_demo.rs  recording_demo.rs  render_cache_demo.rs  session_tags_demo.rs  simple_test.rs  snippet_usage.rs  snippets.toml  snippets_demo.rs  (+7 more)
poc/floem-poc/: Cargo.toml  IME_TEST_README.md  README.md  README_PANE_TEST.md
poc/floem-poc/src/: canvas_test.rs  ime_test.rs  pane_test.rs
resources/: Info.plist
src/: accessibility.rs  aliases.rs  annotations.rs  automation.rs  bookmarks.rs  broadcast.rs  clipboard_history.rs  color.rs  command_validator.rs  completion.rs  diff_view.rs  encoding.rs  env_manager.rs  error.rs  filters.rs  floem_main.rs  highlighting.rs  history.rs  i18n.rs  image_protocol.rs  keybind.rs  lib.rs  link_handler.rs  macros.rs  main.rs  main.rs.backup  main.rs.bak  markdown.rs  mcp_server.rs  mouse_actions.rs  notification.rs  performance_monitor.rs  pipeline.rs  plugin_api.rs  profiles.rs  quick_actions.rs  recording.rs  render_cache.rs  session.rs  session_tags.rs  (+15 more)
src/app/: config.rs  event_loop.rs  logging.rs  mod.rs  state.rs
src/config/: mod.rs
src/debug/: event_log.rs  mod.rs  panel.rs
src/domain/: mod.rs
src/domain/event/: mod.rs
src/domain/memory/: block.rs  compactor.rs  mod.rs
src/domain/session/: mod.rs  model.rs
src/domain/task/: executor.rs  graph.rs  mod.rs  model.rs  scheduler.rs
src/floem_app/: agent_registry.rs  async_bridge.rs  command_validator.rs  execution_history.rs  execution_pipeline.rs  mcp_client.rs  menu.rs  mod.rs  multi_agent.rs  pane.rs  settings.rs  state.rs  test_server.rs  theme.rs
src/floem_app/views/: agent_dashboard.rs  ai_block.rs  command_queue.rs  context_inspector.rs  history_view.rs  mcp_panel.rs  mod.rs  pane_view.rs  search.rs  settings_view.rs  status_bar.rs  streaming_view.rs  tab_bar.rs  terminal.rs  tool_form.rs
src/infrastructure/: mod.rs
src/infrastructure/mcp/: client.rs  mod.rs  registry.rs  server_config.rs  tools.rs
src/logging/: layers.rs  mod.rs
src/mcp/: client.rs  context.rs  error.rs  mod.rs  offline.rs  response.rs  server_config.rs  transport.rs
src/presentation/: keybindings.rs  layout.rs  mod.rs  theme.rs  tui.rs
src/terminal/: bracket.rs  clipboard.rs  env.rs  hyperlink.rs  mod.rs  pty.rs  screen.rs  screen.rs.backup  screen.rs.bak  screen.rs.bak2  search.rs  selection.rs  title.rs  url.rs
src/ui/: mcp_panel.rs  mod.rs  palette.rs  status_bar.rs
tests/: README_FLOEM_TESTS.md  annotations_integration_test.rs  automation_tests.rs  broadcast_integration.rs  diff_view_integration.rs  environment_test.rs  filters_integration_test.rs  floem_tests.rs  floem_tests_standalone.rs  keyboard_test.rs  macro_integration_test.rs  osc_sequences_test.rs  session_test.rs  snippets_integration_test.rs  terminal_history_test.md  test_advanced_features.rs  test_edge_cases.rs  test_ich_dch.rs  test_integration.rs  test_new_features.rs  test_shell_output.rs  test_vim_simulation.rs  theme_editor_integration_test.rs  ui_automation.rs
tests/fixtures/: diff_test_new.txt  diff_test_old.txt
(+17 files in other folders)
