[package]
name = "agterm"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "AI Agent Terminal - Native GPU-accelerated terminal with AI orchestration"
repository = "https://github.com/coldwoong-moon/agterm"
keywords = ["terminal", "gpu", "ai-agent", "mcp", "iced"]
categories = ["command-line-interface", "development-tools", "gui"]

[[bin]]
name = "agterm"
path = "src/main.rs"

[dependencies]
# GUI Framework (tiny-skia CPU renderer - faster for many small text widgets)
iced = { version = "0.13", default-features = false, features = ["tokio", "advanced", "tiny-skia"] }

# Terminal/PTY
portable-pty = "0.8"
# vte = "0.13"  # TODO: implement ANSI escape code parsing for enhanced terminal support

# TODO: implement async operations with tokio
# tokio = { version = "1", features = ["full"] }

# TODO: implement MCP (Model Context Protocol) support
# rmcp = { version = "0.13", features = ["client", "client-side-sse", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# TODO: implement data serialization if needed
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"

# Configuration
dirs = "5"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Error Handling
thiserror = "2"
# TODO: consider using for flexible error contexts
# anyhow = "1"

# TODO: implement async utilities if needed
# futures = "0.3"

# TODO: implement parking_lot for sync primitives if needed
# parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

# macOS .app bundle configuration
[package.metadata.bundle]
name = "AgTerm"
identifier = "com.coldwoong-moon.agterm"
icon = ["assets/icons/icon.icns"]
version = "1.0.0"
copyright = "Copyright (c) 2024 coldwoong-moon"
category = "Developer Tools"
short_description = "AI Agent Terminal"
long_description = """
AgTerm is a native GPU-accelerated terminal emulator with AI agent orchestration.
Features include multi-tab support, PTY management, and MCP protocol integration.
"""

# Windows configuration
[package.metadata.bundle.windows]
icon = ["assets/icons/icon.ico"]

# Linux configuration
[package.metadata.bundle.linux]
icon = ["assets/icons/icon.png"]
