[package]
name = "agterm"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "AI Agent Terminal - Native GPU-accelerated terminal with AI orchestration"
repository = "https://github.com/coldwoong-moon/agterm"
keywords = ["terminal", "gpu", "ai-agent", "mcp", "iced"]
categories = ["command-line-interface", "development-tools", "gui"]

[[bin]]
name = "agterm"
path = "src/main.rs"

[lib]
name = "agterm"
path = "src/lib.rs"

[dependencies]
# GUI Framework (tiny-skia CPU renderer - faster for many small text widgets)
iced = { version = "0.13", default-features = false, features = ["tokio", "advanced", "tiny-skia", "canvas"] }

# Terminal/PTY
portable-pty = "0.8"
vte = "0.13"  # ANSI escape code parsing for enhanced terminal support
unicode-width = "0.1"  # Wide character (CJK) width calculation
regex = "1"  # URL pattern matching for hyperlink detection
once_cell = "1"  # Lazy static initialization for regex patterns

# TODO: implement async operations with tokio
# tokio = { version = "1", features = ["full"] }

# TODO: implement MCP (Model Context Protocol) support
# rmcp = { version = "0.13", features = ["client", "client-side-sse", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration and serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
shellexpand = "3"

# Clipboard
arboard = "3"

# URL handling
open = "5"
urlencoding = "2"  # URL decoding for file:// paths in OSC 7

# Audio (for terminal bell sound)
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# Desktop notifications
notify-rust = "4"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Error Handling
thiserror = "2"
base64 = "0.22.1"
# TODO: consider using for flexible error contexts
# anyhow = "1"

# TODO: implement async utilities if needed
# futures = "0.3"

# TODO: implement parking_lot for sync primitives if needed
# parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

# macOS .app bundle configuration
[package.metadata.bundle]
name = "AgTerm"
identifier = "com.coldwoong-moon.agterm"
icon = ["assets/icons/icon.icns"]
version = "1.0.0"
copyright = "Copyright (c) 2024 coldwoong-moon"
category = "Developer Tools"
short_description = "AI Agent Terminal"
long_description = """
AgTerm is a native GPU-accelerated terminal emulator with AI agent orchestration.
Features include multi-tab support, PTY management, and MCP protocol integration.
"""

# Windows configuration
[package.metadata.bundle.windows]
icon = ["assets/icons/icon.ico"]

# Linux configuration
[package.metadata.bundle.linux]
icon = ["assets/icons/icon.png"]

# Benchmark configuration
[[bench]]
name = "rendering_benchmark"
harness = false

[[bench]]
name = "terminal_benchmark"
harness = false
